2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/libglade.defs: Update for autogenerated libglade
	defs.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2007-02-02  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/libglade.defs (signal_connect)
	(signal_autoconnect): Don't leave guile mode for these functions.

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libglade-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

2005-04-10  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/glade-support.c: Use new SCM<->gpointer conversion
	macros.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

2004-11-15  Andy Wingo  <wingo@pobox.com>

	* package.ac: Add record_check.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* gtk-checks.ac: 
	* glib-checks.ac: 
	* defs-checks.ac: Versioned pkg-config check.

	* examples/test.scm: Use "exec guile-gnome-0 ..."

2004-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
	versioned directory.

2004-09-27  Andy Wingo  <wingo@pobox.com>

	* gnome/glade.scm: Avoid deprecated modules.

	* examples/test.scm: Add license block.

2004-09-19  Andy Wingo  <wingo@pobox.com>
