@@ -1,3 +1,8 @@
+2007-11-01  Andy Wingo  <wingo@pobox.com>
+
+	* Makefile.am:
+	* doc/: Add documentation, generated from upstream gtk-doc.
+
 2007-09-25  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.15.94 ==
